discussion/kv_engine/170541/170541_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-11 13:42:13.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 14:39:56.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15549/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15549/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15549/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43863/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0028/0047]: test mb5215...(18 ms) SKIPPED

        Start 407: memcached_testapp.ep.TransportProtocols/CmdTimerTest
400/421 Test #405: memcached_testapp.ep.TransportProtocols/IPv6Test ..............................................................................   Passed    0.86 sec
        Start 408: memcached_testapp.ep.TransportProtocols/CollectionsTest
401/421 Test #407: memcached_testapp.ep.TransportProtocols/CmdTimerTest ..........................................................................   Passed    0.86 sec
        Start 409: memcached_testapp.ep.TransportProtocols/DcpTest
402/421 Test #408: memcached_testapp.ep.TransportProtocols/CollectionsTest .......................................................................   Passed    0.84 sec
        Start 410: memcached_testapp.ep.TransportProtocols/DcpConsumerBufferAckTest
403/421 Test #409: memcached_testapp.ep.TransportProtocols/DcpTest ...............................................................................   Passed    0.89 sec
        Start 411: memcached_testapp.ep.Transport/DeprecatedCommandsTests
404/421 Test #402: memcached_testapp.ep.TransportProtocols/GetSetTest ............................................................................   Passed    3.51 sec
        Start 412: memcached_testapp.ep.TransportProtocols/DurabilityTest
405/421 Test #403: memcached_testapp.ep.TransportProtocols/InterfacesTest ........................................................................   Passed    3.96 sec
        Start 413: memcached_testapp.ep.TransportProtocols/SubdocDurabilityTest
406/421 Test #412: memcached_testapp.ep.TransportProtocols/DurabilityTest ........................................................................   Passed    0.81 sec
        Start 414: memcached_testapp.ep.TransportProtocols/ArithmeticTest
407/421 Test #410: memcached_testapp.ep.TransportProtocols/DcpConsumerBufferAckTest ..............................................................   Passed    1.84 sec
        Start 415: memcached_testapp.ep.TransportProtocols/ArithmeticXattrOnTest
408/421 Test #411: memcached_testapp.ep.Transport/DeprecatedCommandsTests ........................................................................   Passed    1.56 sec
        Start 416: memcached_testapp.ep.TransportProtocols/AuditTest
409/421 Test #406: memcached_testapp.ep.TransportProtocols/ClusterConfigTest .....................................................................   Passed    3.84 sec
        Start 417: memcached_testapp.ep.TransportProtocols/BucketTest
410/421 Test #413: memcached_testapp.ep.TransportProtocols/SubdocDurabilityTest ..................................................................   Passed    0.94 sec
        Start 418: testapp_auth_provider_test
411/421 Test #415: memcached_testapp.ep.TransportProtocols/ArithmeticXattrOnTest .................................................................   Passed    1.25 sec
        Start 419: cluster_test
412/421 Test #400: memcached_testapp.ep.TransportProtocols/ExternalAuthTest ......................................................................   Passed    7.41 sec
        Start 420: memcached_unsigned_leb128_test
413/421 Test #395: memcached_testapp.ep.CleanOrUnclean/PersistToTest .............................................................................   Passed    8.85 sec
        Start 421: memcached-hostutils-test
414/421 Test #418: testapp_auth_provider_test ....................................................................................................   Passed    2.72 sec
415/421 Test #414: memcached_testapp.ep.TransportProtocols/ArithmeticTest ........................................................................   Passed    5.13 sec
416/421 Test #420: memcached_unsigned_leb128_test ................................................................................................   Passed    2.50 sec
417/421 Test #421: memcached-hostutils-test ......................................................................................................   Passed    4.23 sec
418/421 Test #419: cluster_test ..................................................................................................................   Passed    8.33 sec
419/421 Test #417: memcached_testapp.ep.TransportProtocols/BucketTest ............................................................................   Passed   10.65 sec
420/421 Test #416: memcached_testapp.ep.TransportProtocols/AuditTest .............................................................................   Passed   13.46 sec
421/421 Test #381: memcached_testapp.ep.SDPerf/SubdocPerfTest ....................................................................................   Passed   26.98 sec

99% tests passed, 1 tests failed out of 421

Total Test time (real) = 571.55 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43863/ )

Timeout of a CTest test 399/421 Test #283: ep_testsuite_basic.ephemeral.comp_active ......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17591/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17591/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25691/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36982/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5196/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17286/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5257/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18324/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16365/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
